deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellonode
  labels:
    app: hellonode
spec:
  selector:
    matchLabels:
      app: hellonode
  replicas: 2
  template:
    metadata:
      name: hellonode
      labels:
        app: hellonode
    spec:
      containers:
        - name: hellonode
          image: mupirang/hellonode
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 1000m
              memory: 2048Mi
