deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellonode
spec:
  type: NodePort
  selector:
    app: hellonode
  ports:
    -name: hellonode
     port: 8090
     targetPort: 8081
