deployment/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellonode
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: 127.0.0.1:8080
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: hellonode
                port:
                  number: 8090
